<resources>
    <string name="app_name">Pouch</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_pouches_found">No goals found.</string>
    <string name="amount_saved">%1$s saved.</string>
    <string name="amount_remaining">%1$s remaining.</string>
    <string name="title_activity_pouch">GoalActivity</string>
    <string name="no_transactions_found">No transactions found.</string>
    <string name="reached">Reached</string>
    <string name="goal">Goal</string>
    <string name="remaining">Remaining</string>
    <string name="saved">Saved</string>
    <string name="add_money">Add Money</string>
    <string name="pouches">Goals</string>
    <string name="profile">Profile</string>
    <string name="available_balance">Available totalSaved</string>
    <string name="allocate_available_balance">Allocate available totalSaved</string>
    <string name="change_currency">Change currency</string>
    <string name="amount">Amount</string>
    <string name="of_100">/100%</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="create_new_pouch">Create new goal</string>
    <string name="name_of_pouch">Name of Goal</string>
    <string name="goal_amount_optional">Goal amount (optional)</string>
    <string name="set_percentage_optional">Set percentage (optional)</string>
    <string name="create">Create</string>
    <string name="name_error">Please enter a name.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="payment_delete_message">Are you sure you want to delete this transaction?</string>
    <string name="payment_dialog_message">Select which type of transaction you want, enter the amount and tap save.</string>
    <string name="edit_payment">Edit Transaction</string>
    <string name="delete_payment">Delete Transaction</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="amount_cash_out">Amount: %1$s</string>
    <string name="total_balance">Total Balance</string>
    <string name="money_saved">Money Saved</string>
    <string name="percentage_used">Percentage Used</string>
    <string name="dashboard">Dashboard</string>
    <string name="stats">Stats</string>
    <string name="total_money_saved">Total money saved</string>
    <string name="amount_saved_in_pouch">Amount saved in %1$s:</string>
    <string name="positive_transaction">+ %1$s</string>
    <string name="negative_transaction">- %1$s</string>
    <string name="money_format">%1$s%2$s</string>
    <string name="split_money">Split Money</string>
    <string name="split_evenly">Split evenly</string>
    <string name="enter_the_amount_of_money_you_want_to_split">Enter the amount of money you want to split.</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="cash_out">Cash Out</string>
    <string name="goal_reached">Goal reached!</string>
    <string name="percentage_left">Percentage left</string>
    <string name="save_for_later">Save for later</string>
    <string name="version">Version</string>

    <string name="next">Next</string>
    <string name="left">Left</string>
    <string name="error_message">Oops something went wrong!</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="title_activity_welcome_screen">Welcome</string>
    <string name="view_pouch">View goal</string>
    <string name="almost_completed">Almost completed</string>
    <string name="recent_transactions">Recent Transactions (Last 10)</string>
    <string name="next_auto_transaction">Next auto transaction</string>
    <string name="feature_locked">Feature locked</string>
    <string name="most_saved_pouch">Most saved goal</string>
    <string name="action_budget_planner">Budget Planner</string>
    <string name="info">Info</string>
    <string name="transactions">Transactions</string>
    <string name="na">N/A</string>
    <string name="title_activity_settings">Settings</string>
    <string name="currency">Change currency symbol</string>
    <string name="app_id">ca-app-pub-6866825219994391~2824476644</string>
    <string name="ad_unit_id">ca-app-pub-6866825219994391/3660397233</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="pouch_added">Goal added.</string>
    <string name="alright">ALRIGHT!</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_goals">Goals</string>

    <string name="existing_name">This name already exists.</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="give_us_your_feedback">Give us your feedback</string>

</resources>
