<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/deposit_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deposit"
            android:textColor="@color/colorText" />

        <RadioButton
            android:id="@+id/withdraw_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/withdraw"
            android:textColor="@color/colorText" />
    </RadioGroup>

    <faranjit.currency.edittext.CurrencyEditText
        android:id="@+id/amount_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pouch_totalSaved_tv_label"
        android:hint="@string/amount"
        android:textColor="@color/colorText"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:showSymbol="false" />

    <TextView
        android:id="@+id/pouch_totalSaved_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:textColor="@color/colorText"
        android:text="@string/amount_saved_in_pouch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/pouch.totalSaved.tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorText"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/pouch_totalSaved_tv_label"
        app:layout_constraintStart_toEndOf="@+id/pouch_totalSaved_tv_label" />
</android.support.constraint.ConstraintLayout>